--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -76,4 +76,14 @@ body {
   text-align: center;
   transition: all 0.3s ease 0s;
   min-height: 48px;
+  &_white {
+    color: orange;
+    background-color: #fff;
+    @media (any-hover: hover) {
+      &:hover {
+        background-color: orange;
+        color: #fff;
+      }
+    }
+  }
 }
