--- a/css/style.scss
+++ b/css/style.scss
@@ -332,8 +332,8 @@
 }
 
 .basket__img {
-  height: 20px;
-  width: 20px;
+  height: 25px;
+  width: 40px;
 }
 
 .user__img {
@@ -935,3 +935,182 @@
     color: grey;
   }
 }
+
+//
+
+.action__img {
+  height: 30px;
+  width: 30px;
+  padding-right: 10px;
+}
+.page__products {
+}
+.products {
+  padding-bottom: 44px;
+  &__container {
+  }
+  &__title {
+    margin: 0px 0px 32px/40px * 1em 0px;
+  }
+  &__items {
+    display: grid;
+    gap: 32px;
+    grid-template-columns: repeat(auto-fit, minmax(263px, 1fr));
+  }
+  &__item {
+  }
+}
+
+._title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 120%;
+  text-align: center;
+}
+
+.item-product {
+  background: #f4f5f7;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  @media (any-hover: hover) {
+    &:hover {
+      .item-product__actions {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+  &__labels {
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    right: 24px;
+    top: 24px;
+  }
+  &__label {
+    flex: 0 0 48px;
+    width: 48px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-weight: 500;
+    &:not(:last-child) {
+      margin: 0 0 10px 0;
+    }
+  }
+  &__label_sale {
+    background: #e97171;
+  }
+  &__label_new {
+    background: #2ec1ac;
+  }
+  &__image {
+    padding: 0 0 5% 0;
+  }
+  &__body {
+    flex: 1 1 auto;
+    padding: 16px 16px 30px 16px;
+    display: flex;
+    flex-direction: column;
+  }
+  &__content {
+    flex: 1 1 auto;
+  }
+  &__title {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 120%;
+    margin: 0 0 8px/24px * 1em 0;
+  }
+  &__text {
+    color: gray;
+    line-height: 150%;
+    margin: 0 0 8px/24px * 1em 0;
+  }
+  &__prices {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    line-height: 150%;
+  }
+  &__price {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  &__price_old {
+    font-size: 16px;
+    font-weight: normal;
+    margin-left: 10px;
+    color: #b0b0b0;
+    text-decoration: line-through;
+  }
+  &__actions {
+    @media (any-hover: none) {
+      padding: 15px 0 0 0;
+    }
+    @media (any-hover: hover) {
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(58, 58, 58, 0.74);
+      z-index: 3;
+      transition: all 0.3s ease 0s;
+    }
+  }
+}
+
+.actions-product {
+  &__body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  &__button {
+    flex: 1 1 100%;
+    &:not(:last-child) {
+      margin: 0 0 24px 0;
+    }
+  }
+  &__link {
+    display: flex;
+    align-items: center;
+    color: inherit;
+    font-weight: 600;
+    transition: color 0.3s ease 0s;
+    @media (any-hover: hover) {
+      color: #fff;
+      &:hover {
+        color: orange;
+      }
+    }
+  }
+}
+.product__img {
+  height: 300px;
+  width: 100%;
+  @media (max-width: 577px) {
+    height: 100%;
+  }
+}
+.products {
+  &__footer {
+    padding: 32px 0 0 0;
+    text-align: center;
+  }
+  &__more {
+    border: 1px solid orange;
+    min-width: 245px;
+  }
+}
+//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
