--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -62,8 +62,8 @@ body {
   position: relative;
 }
 .ibg img {
-  // width: 0;
-  // height: 0;
+  // width: 0px;
+  // height: 0px;
   position: absolute;
   top: 0;
   left: 0;
