--- a/css/style.scss
+++ b/css/style.scss
@@ -326,6 +326,32 @@
     }
   }
   &__body {
+    background: #f4f5f7;
+    border: 1px solid #e0e0e0;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    padding: 15px;
+    width: 300px;
+    z-index: 5;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease 0s;
+    transform: translate(0px, 20px);
+    ._active & {
+      opacity: 1;
+      visibility: visible;
+      transform: translate(0px, 0px);
+    }
+    @media (max-width: 992px) {
+      top: 50px;
+    }
+    @media (max-width: 768px) {
+      position: fixed;
+      top: 50px;
+      left: 0;
+      width: 100%;
+    }
   }
   &__list {
   }
@@ -1081,6 +1107,10 @@
     &:not(:last-child) {
       margin: 0 0 24px 0;
     }
+    &._hold {
+      opacity: 0.2;
+      cursor: default;
+    }
   }
   &__link {
     display: flex;
@@ -1111,6 +1141,74 @@
   &__more {
     border: 1px solid orange;
     min-width: 245px;
+    &._hold {
+      opacity: 0.4;
+      cursor: default;
+    }
   }
+}
+._flyImage._ibg {
+  opacity: 1;
+  position: fixed;
+  z-index: 100;
+  transition: all 1s ease 0s;
+}
+.cart-list {
+  overflow: auto;
+  max-height: 250px;
+  &__image {
+    // flex: 0 0 100px;
+    // height: 10px;
+    background-size: cover;
+  }
+  &__body {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 0 0 10px;
+  }
+  &__title {
+    color: inherit;
+    font-weight: 600;
+    transition: color 0.3s ease 0s;
+    margin: 0 0 5px/16px * 1em 0;
+    @media (any-hover: hover) {
+      &:hover {
+        color: orange;
+      }
+    }
+  }
+  &__quantity {
+    font-size: 14px;
+    margin: 0 0 5px/14px * 1em 0;
+  }
+  &__delete {
+    color: red;
+    font-size: 14px;
+    @media (any-hover: hover) {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  &__item {
+    display: flex;
+    align-items: flex-start;
+    &:not(:last-child) {
+      margin: 0 0 15px 0;
+    }
+  }
+}
+.cart-ibg {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  margin-right: 20px;
+}
+.cart-ibg img {
+  width: 70px;
+  height: 90px;
 }
 //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
