--- a/css/style.scss
+++ b/css/style.scss
@@ -318,7 +318,7 @@
       justify-content: center;
       align-items: center;
       top: -7px;
-      right: 70px;
+      right: 20px;
       border-radius: 50%;
       background-color: #eca100d0;
       color: #fff;
@@ -353,7 +353,13 @@
       width: 100%;
     }
   }
-  &__list {
+  &__btn {
+    border: 1px solid #464545;
+    cursor: pointer;
+    padding: 6px;
+    &:hover {
+      background: #cccbcb;
+    }
   }
 }
 
@@ -816,6 +822,9 @@
   &__price-img {
     width: 30px;
     height: 30px;
+    @media (max-width: 400px) {
+      margin-right: 10px;
+    }
   }
 }
 
@@ -968,11 +977,11 @@
 
 //
 
-.action__img {
-  height: 30px;
-  width: 30px;
-  padding-right: 10px;
-}
+// .action__img {
+//   height: 30px;
+//   width: 30px;
+//   padding-right: 10px;
+// }
 .page__products {
 }
 .products {
@@ -996,6 +1005,9 @@
   font-weight: 700;
   line-height: 120%;
   text-align: center;
+  @media (max-width: 565px) {
+    font-size: 35px;
+  }
 }
 
 .item-product {
@@ -1116,19 +1128,19 @@
       cursor: default;
     }
   }
-  &__link {
-    display: flex;
-    align-items: center;
-    color: inherit;
-    font-weight: 600;
-    transition: color 0.3s ease 0s;
-    @media (any-hover: hover) {
-      color: #fff;
-      &:hover {
-        color: orange;
-      }
-    }
-  }
+  // &__link {
+  //   display: flex;
+  //   align-items: center;
+  //   color: inherit;
+  //   font-weight: 600;
+  //   transition: color 0.3s ease 0s;
+  //   @media (any-hover: hover) {
+  //     color: #fff;
+  //     &:hover {
+  //       color: orange;
+  //     }
+  //   }
+  // }
 }
 .product__img {
   height: 300px;
@@ -1199,6 +1211,7 @@
   &__item {
     display: flex;
     align-items: flex-start;
+    margin-bottom: 20px;
     &:not(:last-child) {
       margin: 0 0 15px 0;
     }
@@ -1280,7 +1293,6 @@
   }
   &__slide {
     position: relative;
-    min-height: 580px;
   }
   &__image {
     height: 100%;
@@ -1310,13 +1322,46 @@
   width: 50px;
   height: 50px;
 }
-
+//анимация
+.animation {
+  margin-bottom: 110px;
+  text-align: center;
+  position: relative;
+  /* overflow-x: hidden; */
+}
+.text-animation {
+  background: linear-gradient(
+    180deg,
+    #adadad 0%,
+    rgba(218, 218, 218, 0.93) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 150px;
+  text-transform: uppercase;
+  line-height: 280px;
+  opacity: 0.4;
+  position: absolute;
+  z-index: -1;
+  animation: line-text 8s linear 2s infinite;
+  @media (max-width: 577px) {
+    font-size: 100px;
+  }
+}
+@keyframes line-text {
+  from {
+    transform: translateX(115%);
+    transform-origin: left center;
+  }
+  to {
+    transform: translateX(-115%);
+    transform-origin: right center;
+  }
+}
 //
 
-.page__tips {
-}
 .tips {
-  padding-top: 44px;
+  padding-top: 140px;
   padding-bottom: 44px;
   &__container {
   }
@@ -1401,7 +1446,7 @@
 .page-furniture {
 }
 .furniture {
-  padding-bottom: 85px;
+  padding-bottom: 30px;
   &__container {
   }
   &__label {
@@ -1494,3 +1539,199 @@
 //   width: 35px;
 // }
 //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
+
+//popup
+
+// .popup {
+//   &__bg {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100vh;
+//     background: rgba(0, 0, 0, 0.801);
+//     opacity: 0;
+//     transition: 0.8s all;
+//   }
+//   &__bg.active {
+//     /* При добавлении класса 'active'*/
+//     opacity: 1;
+//     transition: 0.5s all;
+//     z-index: 60;
+//   }
+//   &__content {
+//     width: 600px;
+//     height: 300px;
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%) scale(0);
+//     background-image: url(/img/popup-bg.jpg);
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-position: top center;
+//     padding: 40px;
+//     transition: 0.9s all;
+//     border: 2px solid #eca100d0;
+//     @media (max-width: 620px) {
+//       width: 400px;
+//       height: 300px;
+//     }
+//     @media (max-width: 430px) {
+//       width: 200px;
+//       height: 500px;
+//       overflow-y: scroll;
+//     }
+//   }
+//   &__content.active {
+//     /* При добавлении класса 'active'*/
+//     transform: translate(-50%, -50%) scale(1);
+//     transition: 0.9s all;
+//   }
+//   &__title {
+//     font-size: 24px;
+//     background-color: #eca100d0;
+//     padding: 10px;
+//     color: #fff;
+//     text-transform: uppercase;
+//     text-align: center;
+//     @media (max-width: 430px) {
+//       font-size: 16px;
+//     }
+//   }
+//   &__countdown {
+//     color: #fff;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     @media (max-width: 430px) {
+//       display: flex;
+//       flex-direction: column;
+//     }
+//   }
+//   &__time {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     margin: 30px;
+//     @media (max-width: 620px) {
+//       margin: 15px;
+//     }
+//   }
+//   &__time p {
+//     margin: 0 0 10px;
+//     font-size: 40px;
+//   }
+//   &__time small {
+//     font-size: 23px;
+//   }
+//   &__text {
+//     background-color: #eca100d0;
+//     padding: 6px;
+//     margin-bottom: 20px;
+//   }
+//   &__text span {
+//     color: red;
+//   }
+//   &__btn {
+//     border: 2px solid #fff;
+//     font-size: 20px;
+//     background-color: #fff;
+//     border-radius: 20px;
+//     padding: 5px;
+//     display: block;
+//     margin: 0 auto;
+//     cursor: pointer;
+//   }
+// }
+
+.page__banner {
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.banner {
+  &__content {
+    background-image: url(/img/popup-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 40px;
+    border: 2px solid #f1e8dd;
+  }
+  &__title {
+    font-size: 24px;
+    background: #f1e8dd;
+    padding: 10px;
+    color: #000;
+    text-transform: uppercase;
+    text-align: center;
+    @media (max-width: 525px) {
+      font-size: 18px;
+    }
+  }
+  &__countdown {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__time {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    @media (max-width: 525px) {
+      margin: 20px;
+    }
+    @media (max-width: 400px) {
+      margin: 10px;
+    }
+  }
+  &__time p {
+    margin: 0 0 10px;
+    font-size: 40px;
+    @media (max-width: 525px) {
+      font-size: 30px;
+    }
+    @media (max-width: 400px) {
+      font-size: 25px;
+    }
+  }
+  &__time small {
+    font-size: 23px;
+    @media (max-width: 525px) {
+      font-size: 18px;
+    }
+    @media (max-width: 400px) {
+      font-size: 16px;
+    }
+  }
+  &__text {
+    background-color: #f1e8dd;
+    padding: 6px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  &__text span {
+    color: red;
+  }
+  &__btn {
+    font-size: 20px;
+    background: rgb(221, 166, 65);
+    color: #fff;
+    border-radius: 20px;
+    padding: 5px;
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
+    cursor: pointer;
+    &:hover {
+      background-color: #fff;
+      color: #000;
+    }
+    transition: all 0.3s ease-in;
+  }
+}
