--- a/css/style.scss
+++ b/css/style.scss
@@ -1653,7 +1653,7 @@
 }
 .banner {
   &__content {
-    background-image: url(img/popup-bg.jpg);
+    background-image: url(../img/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
